# game_of_life_SFML

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp
src/app/include/: app.h
src/cell/: CMakeLists.txt  cell.cpp
src/cell/include/: cell.h
